--- a/index.html
+++ b/index.html
@@ -15,15 +15,16 @@
       <div class="row">
         <div class="col-md-2">
           <h1>Pedibus Völs</h1>
+
           <p>Ein Pedibus ist ein Autobus auf Füßen. Die "BuschauffeurInnen" sind Eltern, die "Fahrgäste" sind Schulkinder der VS Völs. Die Strecke des Pedibus führt durch Völs. An ausgeschilderten Haltestellen können die Kinder "zusteigen". So wird die Gruppe von Haltestelle zu Haltestelle immer größer und gemeinsam gehen die Kinder als Pedibus zur Schule.</p>
         </div>
         <div class="col-md-10">
-          <iframe width="100%"
-                  height="100%"
-                  frameborder="0"
-                  allowfullscreen
-                  src="https://umap.openstreetmap.de/en/map/pedibus-vols_5541?scaleControl=false&miniMap=false&scrollWheelZoom=false&zoomControl=true&allowEdit=false&moreControl=true&searchControl=null&tilelayersControl=null&embedControl=null&datalayersControl=true&onLoadPanel=undefined&captionBar=false"
-          ></iframe>
+          <div class="embed-responsive">
+            <iframe class="embed-responsive-item"
+                    allowfullscreen
+                    src="https://umap.openstreetmap.de/en/map/pedibus-vols_5541?scaleControl=false&miniMap=false&scrollWheelZoom=false&zoomControl=true&allowEdit=false&moreControl=true&searchControl=null&tilelayersControl=null&embedControl=null&datalayersControl=true&onLoadPanel=undefined&captionBar=false"
+            ></iframe>
+        </div>
         </div>
       </div>
     </div>
