--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <style>
+      html, body, .container-fluid, .row {
+        height: 100%;
+      }
+    </style>
 
     <title>Pedibus Völs</title>
   </head>
@@ -14,17 +19,21 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-md-2">
-          <h1>Pedibus Völs</h1>
-
+          <h1>Pedibus Völs zur Volksschule</h1>
+          <div class="alert alert-success" role="alert">
+            <h4 class="alert-heading">2020</h4>
+            <p>14. September bis 9. Oktober</p>
+          </div>
           <p>Ein Pedibus ist ein Autobus auf Füßen. Die "BuschauffeurInnen" sind Eltern, die "Fahrgäste" sind Schulkinder der VS Völs. Die Strecke des Pedibus führt durch Völs. An ausgeschilderten Haltestellen können die Kinder "zusteigen". So wird die Gruppe von Haltestelle zu Haltestelle immer größer und gemeinsam gehen die Kinder als Pedibus zur Schule.</p>
+          <p>Die Karte nebenan zeigt die Haltestellen.</p>
+
         </div>
         <div class="col-md-10">
-          <div class="embed-responsive">
-            <iframe class="embed-responsive-item"
-                    allowfullscreen
-                    src="https://umap.openstreetmap.de/en/map/pedibus-vols_5541?scaleControl=false&miniMap=false&scrollWheelZoom=false&zoomControl=true&allowEdit=false&moreControl=true&searchControl=null&tilelayersControl=null&embedControl=null&datalayersControl=true&onLoadPanel=undefined&captionBar=false"
-            ></iframe>
-        </div>
+          <iframe width="100%"
+                  height="100%"
+                  allowfullscreen
+                  src="https://umap.openstreetmap.de/en/map/pedibus-vols_5541?scaleControl=false&miniMap=false&scrollWheelZoom=false&zoomControl=true&allowEdit=false&moreControl=true&searchControl=null&tilelayersControl=null&embedControl=null&datalayersControl=true&onLoadPanel=undefined&captionBar=false"
+          ></iframe>
         </div>
       </div>
     </div>
