--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
   <body>
     <div class="container-fluid">
       <div class="row">
-        <div class="col-xl-2 col-lg-4 col-md-6 more-margin">
-          <h1>Pedibus Völs zur Volksschule</h1>
+        <div class="col-xl-2 col-lg-4 col-md-6">
+          <h1 class="more-margin">Pedibus Völs zur Volksschule</h1>
           <div class="alert alert-success" role="alert">
             <h4 class="alert-heading">2020</h4>
             <p>14. September bis 9. Oktober</p>
