--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
       <div class="col-xl-10 col-lg-8 col-md-6">
           <iframe width="100%"
                   height="100%"
+                  frameborder="0"
                   allowfullscreen
                   src="https://umap.openstreetmap.de/en/map/pedibus-vols_5541?scaleControl=false&miniMap=false&scrollWheelZoom=false&zoomControl=true&allowEdit=false&moreControl=true&searchControl=null&tilelayersControl=null&embedControl=null&datalayersControl=true&onLoadPanel=undefined&captionBar=false"
           ></iframe>
