--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
         <div class="col col-xl-3 col-lg-5 col-md-6">
           <h1 class="more-top-margin">Pedibus Völs zur Volksschule</h1>
           <div class="alert alert-success" role="alert">
-            <h4 class="alert-heading">2020</h4>
-             <p>14. September bis 9. Oktober</p>
+             <p>Alle weiteren Infos findest Du auf auf der <a href="https://vs-voels.tsn.at/index.php/schulwegpolizei">Schulwebseite der VS-Völs</a></p>
           </div>
           <p><strong>Ein Pedibus ist ein Autobus auf Füßen.</strong> Die "BuschauffeurInnen" sind Eltern, die "Fahrgäste" sind Schulkinder der VS Völs.</p>
           <p>Die Strecke des Pedibus führt durch Völs. An ausgeschilderten Haltestellen können die Kinder "zusteigen". So wird die Gruppe von Haltestelle zu Haltestelle immer größer und gemeinsam gehen die Kinder als Pedibus zur Schule.</p>
